@@ -109,7 +109,7 @@ authplugin = '/etc/dansguardian/authplugins/proxy-basic.conf'
 #authplugin = '/etc/dansguardian/authplugins/proxy-digest.conf'
 #authplugin = '/etc/dansguardian/authplugins/proxy-ntlm.conf'
 #authplugin = '/etc/dansguardian/authplugins/ident.conf'
-#authplugin = '/etc/dansguardian/authplugins/ip.conf'
+authplugin = '/etc/dansguardian/authplugins/ip.conf'
 
 # Preemptive banning - this means that if you have proxy auth enabled and a user accesses
 # a site banned by URL for example they will be denied straight away without a request
