@@ -1,6 +1,7 @@
 HEAD
 	+ Bugfix: trim URL string as DB stores it as a varchar(1024) (Log)
 	+ Disabled ban URL regexes
+	+ Added filter profile per object
 1.3.14
 	+ Bugfix: in restartService we assure that all files are in place
 	before restarting the daemons
